tests-e2e/tests/snapshots/cli__config_empty_source_program_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:40
  •
  │
  • source command program must not be empty or whitespace-only
  │
  │   {"sources":{"kind":"command","program":""}}
  │                                          ╰─
  •
