tests-e2e/tests/snapshots/cli__config_escaped_diagnostic_key_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:17
  •
  │
  • unknown field `onOpened`, expected one of `onOpen`, `onSave`, `onChange`
  │
  │   {"diagnostics":{"on\u004fpened":true}}
  │                   ╰──────────────
  •
