tests-e2e/tests/snapshots/cli__config_file_invalid_utf8.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [ConfigurationFileRead] · --config-file:1:1
  •
  │
  • Cannot read the configuration file: stream did not contain valid UTF-8
  │
  │   invalid-utf8.json
  │   ╰────────────────
  •
