tests-e2e/tests/snapshots/cli__config_file_missing.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [ConfigurationFileRead] · --config-file:1:1
  •
  │
  • Cannot read the configuration file: [FILE NOT FOUND]
  │
  │   missing.json
  │   ╰───────────
  •
