tests-e2e/tests/snapshots/cli__config_invalid_source_arguments_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:62
  •
  │
  • invalid type: integer `1`, expected a string
  │
  │   {"sources":{"kind":"command","program":"custom","arguments":[1]}}
  │                                                                ╰
  •
