tests-e2e/tests/snapshots/cli__config_invalid_source_arguments_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:62
  •
  │
  • invalid type: integer `1`, expected a string
  │
  │   {"sources":{"kind":"command","program":"custom","arguments":[1]}}
  │                                                                ╰
  •
