tests-e2e/tests/snapshots/cli__config_malformed_json_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:2
  •
  │
  • EOF while parsing an object
  │
  │   {
  │    ╰
  •
